Test::Strict - Check syntax, presence of use strict; and test coverage

0.25 2014-10-15T19:52:00Z
  - Update Makefile.PL to point to GitHub as bug tracking system

0.24 2014-10-05T08:28:00Z
  - add Catmandu::Sane, Moo::Role, MooseX::Role::Parameterized, Role::Tiny
    to the list of modules implying strict and warnings. #6

0.23 2014-03-06T10:39:05Z
  - Standardize dates in the Changes file.
  -  Replace modules_enabling_warnings() by @Test::Strict::MODULES_ENABLING_WARNINGS
     and modules_enabling_strict() by @Test::Strict::MODULES_ENABLING_STRICT
     and by that allow the user to customize it. (thaljef - Jeffrey Thalhammer)
     RT #93443

0.22 2013-03-01T07:39:05Z
  - Exclude the MYMETA files from the distribution.

0.21 2013-02-26T20:32:03Z
  - Add x_contributors to the META files.
  - Add Moose::Exporter to the strict and warnings providers (Graham Knop)

0.20 2013-02-22T12:32:03Z
  - Add more modules that set strict and warnings. (suggested by RIBASUSHI, DAXIM)
  - Remove warnings::register
  - Experimental function modules_enabling_strict() to return those module names.
  - Experimental function modules_enabling_warnings() to return those module names.


0.19 2013-02-20T11:12:39Z
  - Skip test if Moose::Autobox is not installed.

0.18 2013-02-17T13:54:13Z
  - RT #83388 - use Moose::Autobox should not be seen as use Moose; (Peter Vereshagin)

0.17 2012-12-30T08:13:42Z
  - Add license field to META files
  - eliminate unwanted dependency on Modern::Perl

0.16 2012-12-28T09:38:47Z
  - Fix the Windows recognition regex in the code as well.
  - rt #80341: Accept use Modern::Perl as strict and warnings. (Peter Vereshagin)
  - rt #55186: Be less strict about filenames when calling syntax_ok directly
       (Frank Lichtenheld)

0.15 2012-12-27T09:59:29Z
  - rt #81849 and rt #79515: disable the coverage testing unless
    a flag is enabled as that was stuck on Windows.
  - rt #44187: Fix test on Cygwin.
  - Add link to Github repository.